# key_encapsulation

./: Cargo.toml  KeyEncapsulation.asciidoc  Kync.asciidoc  README.asciidoc  README.md
c_api/: bindgen.sh  kync.h
kync_test_plugin/: Cargo.toml  README.md  kync.h
kync_test_plugin/src/: ffi.rs  lib.rs  sys.rs
src/: capsule.rs  ffi.rs  lib.rs  plugin.rs  pool.rs
src/ffi/: error.rs  mod.rs
test_plugin/: Cargo.toml
test_plugin/src/: ffi.rs  ffi_tools.rs  key_capsule.rs  lib.rs
test_plugin/src/ffi/: error.rs  mod.rs
tests/: capsule  test_plugin.rs
