[package]
name = "kync"
version = "0.1.0"
authors = ["KizzyCode <development@kizzycode.de>"]
edition = "2018"


[dependencies]
asn1_der = "0.6.1"
libloading = "0.5.0"

[dev-dependencies]
test_plugin = { path = "./test_plugin" }


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true